--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,23 @@
+beautifulsoup4==4.11.1
 certifi==2022.9.24
 charset-normalizer==2.1.1
+dnspython==2.2.1
+filelock==3.8.2
 idna==3.4
+kafka==1.3.5
+lxml==4.9.1
+numpy==1.23.5
+oauthlib==3.2.2
+pandas==1.5.2
 pycoingecko==3.1.0
+pymongo==4.3.3
+PySocks==1.7.1
+python-dateutil==2.8.2
+pytz==2022.6
 requests==2.28.1
+requests-oauthlib==1.3.1
+six==1.16.0
+snscrape==0.4.3.20220106
+soupsieve==2.3.2.post1
+twython==3.9.1
 urllib3==1.26.13
