--- a/kafka/tweetProducer/src/main/resources/twitter-kafka.properties
+++ b/kafka/tweetProducer/src/main/resources/twitter-kafka.properties
@@ -3,5 +3,5 @@
 zookeeper.connect=localhost:2181
 metadata.broker.list=localhost:29092
 request.required.acks=1
-serializer.class=com.example.CoinDataEncoder
-kafka.topic=coin-data-events
+serializer.class=com.trinhhungfischer.cointrendy.TweetDataEncoder
+kafka.topic=twitter-data-event
