--- a/kafka/tweetProducer/pom.xml
+++ b/kafka/tweetProducer/pom.xml
@@ -2,8 +2,8 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.trinhhungfischer.cointrendy</groupId>
-  <artifactId>twitter-kafka</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <artifactId>twitter-kafka-producer</artifactId>
+  <version>1.0</version>
   <name>Twitter Kafka Producer</name>
   <url>http://maven.apache.org</url>
 
@@ -58,9 +58,45 @@
       <artifactId>junit</artifactId>
       <version>4.13.2</version>
     </dependency>
-
   </dependencies>
-  <build>
 
+  <build>
+    <resources>
+      <resource>
+        <directory>${basedir}/src/main/resources</directory>
+      </resource>
+    </resources>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.1</version>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-shade-plugin</artifactId>
+        <version>2.4.3</version>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>shade</goal>
+            </goals>
+            <configuration>
+              <transformers>
+                <transformer
+                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                  <mainClass>com.trinhhungfischer.cointrendy.TweetDataProducer</mainClass>
+                </transformer>
+              </transformers>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
   </build>
 </project>
