--- a/kafka/tweetProducer/pom.xml
+++ b/kafka/tweetProducer/pom.xml
@@ -58,6 +58,13 @@
       <artifactId>junit</artifactId>
       <version>4.13.2</version>
     </dependency>
+
+    <dependency>
+      <groupId>joda-time</groupId>
+      <artifactId>joda-time</artifactId>
+      <version>2.12.1</version>
+    </dependency>
+
   </dependencies>
 
   <build>
