--- a/spark/tweetStreaming/src/main/resources/twitter-spark.properties
+++ b/spark/tweetStreaming/src/main/resources/twitter-spark.properties
@@ -5,7 +5,7 @@ com.twitter.app.kafka.topic=twitter-data-event
 com.twitter.app.kafka.resetType=earliest
 
 #Spark properties
-com.twitter.app.spark.app.name=Iot Data Processor
+com.twitter.app.spark.app.name=Tweet Data Processor
 com.twitter.app.spark.master=spark://spark-master:7077
 com.twitter.app.spark.checkpoint.dir=hdfs://namenode:8020/cointrendy/checkpoint
 com.twitter.app.hdfs=hdfs://namenode:8020/cointrendy/
