update: change rule based sentiment analysis

--- a/spark/tweetStreaming/pom.xml
+++ b/spark/tweetStreaming/pom.xml
@@ -66,6 +66,13 @@
       <scope>test</scope>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/org.apache.opennlp/opennlp-tools -->
+    <dependency>
+      <groupId>org.apache.opennlp</groupId>
+      <artifactId>opennlp-tools</artifactId>
+      <version>1.9.1</version>
+    </dependency>
+
   </dependencies>
 
   <build>
