--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,17 @@
 beautifulsoup4==4.11.1
 certifi==2022.9.24
 charset-normalizer==2.1.1
+click==8.1.3
 dnspython==2.2.1
 filelock==3.8.2
+Flask==2.2.2
 idna==3.4
+importlib-metadata==6.0.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
 kafka==1.3.5
 lxml==4.9.1
+MarkupSafe==2.1.2
 numpy==1.23.5
 oauthlib==3.2.2
 pandas==1.5.2
@@ -20,3 +26,5 @@ six==1.16.0
 soupsieve==2.3.2.post1
 twython==3.9.1
 urllib3==1.26.13
+Werkzeug==2.2.2
+zipp==3.12.1
