--- a/kafka/twitterProducer/pom.xml
+++ b/kafka/twitterProducer/pom.xml
@@ -65,6 +65,17 @@
       <version>2.12.1</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-simple</artifactId>
+      <version>1.7.21</version>
+    </dependency>
+    <dependency>
+          <groupId>org.asynchttpclient</groupId>
+          <artifactId>async-http-client</artifactId>
+          <version>2.12.3</version> <!-- Check for the latest version -->
+    </dependency>
+
   </dependencies>
 
   <build>
