--- a/spark/tweetStreaming/pom.xml
+++ b/spark/tweetStreaming/pom.xml
@@ -73,6 +73,12 @@
       <version>1.9.1</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.json</groupId>
+      <artifactId>json</artifactId>
+      <version>20090211</version>
+    </dependency>
+
   </dependencies>
 
   <build>
